--- a/Notebook/path/ed-donner_llm/week8/day5_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week8/day5_ja.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "614c6202-4575-448d-98ee-78b735775d2b",
    "metadata": {},
    "outputs": [],
@@ -29,10 +29,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0534e714-5a9c-45c6-998c-3472ac0bb8b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with gr.Blocks(title=\"The Price is Right\", fill_width=True) as ui:\n",
     "\n",
@@ -51,10 +80,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "18c12c10-750c-4da3-8df5-f2bc3393f9e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "gio: http://127.0.0.1:7860/: Operation not supported\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7861\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "gio: http://127.0.0.1:7861/: Operation not supported\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-08-16 20:49:08 +0900] [Agents] [INFO] HTTP Request: GET https://api.gradio.app/pkg-version \"HTTP/1.1 200 OK\"\n"
+     ]
+    }
+   ],
    "source": [
     "# グレードV5の変更により、高さからmax_heightに変更するように更新されました\n",
     "# これを上げてくれた学生のエド・Bに感謝します\n",
@@ -98,10 +177,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "87106328-a17a-447e-90b9-c547613468da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-08-16 20:49:08 +0900] [Agents] [INFO] Anonymized telemetry enabled. See                     https://docs.trychroma.com/telemetry for more information.\n",
+      "[2025-08-16 20:49:08 +0900] [Agents] [INFO] \u001b[44m\u001b[37m[Agent Framework] Initializing Agent Framework\u001b[0m\n",
+      "[2025-08-16 20:49:08 +0900] [Agents] [INFO] \u001b[40m\u001b[32m[Planning Agent] Planning Agent is initializing\u001b[0m\n",
+      "[2025-08-16 20:49:08 +0900] [Agents] [INFO] \u001b[40m\u001b[36m[Scanner Agent] Scanner Agent is initializing\u001b[0m\n",
+      "[2025-08-16 20:49:08 +0900] [Agents] [INFO] \u001b[40m\u001b[36m[Scanner Agent] Scanner Agent is ready\u001b[0m\n",
+      "[2025-08-16 20:49:08 +0900] [Agents] [INFO] \u001b[40m\u001b[33m[Ensemble2 Agent] Initializing Ensemble Agent\u001b[0m\n",
+      "[2025-08-16 20:49:08 +0900] [Agents] [INFO] \u001b[40m\u001b[31m[Specialist Agent] Specialist Agent is initializing - connecting to modal\u001b[0m\n",
+      "[2025-08-16 20:49:08 +0900] [Agents] [INFO] \u001b[40m\u001b[31m[Specialist Agent] Specialist Agent is ready\u001b[0m\n",
+      "[2025-08-16 20:49:08 +0900] [Agents] [INFO] \u001b[40m\u001b[34m[Frontier Agent] Initializing Frontier Agent\u001b[0m\n",
+      "[2025-08-16 20:49:08 +0900] [Agents] [INFO] \u001b[40m\u001b[34m[Frontier Agent] Frontier Agent is setting up with OpenAI\u001b[0m\n",
+      "[2025-08-16 20:49:08 +0900] [Agents] [INFO] Use pytorch device_name: cpu\n",
+      "[2025-08-16 20:49:08 +0900] [Agents] [INFO] Load pretrained SentenceTransformer: sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2025-08-16 20:49:11 +0900] [Agents] [INFO] \u001b[40m\u001b[34m[Frontier Agent] Frontier Agent is ready\u001b[0m\n",
+      "[2025-08-16 20:49:11 +0900] [Agents] [INFO] \u001b[40m\u001b[35m[LightGBM Agent] LightGBM Agent is initializing\u001b[0m\n",
+      "[2025-08-16 20:49:11 +0900] [Agents] [INFO] Use pytorch device_name: cpu\n",
+      "[2025-08-16 20:49:11 +0900] [Agents] [INFO] Load pretrained SentenceTransformer: sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2025-08-16 20:49:17 +0900] [Agents] [INFO] \u001b[40m\u001b[35m[LightGBM Agent] LightGBM Agent is ready\u001b[0m\n",
+      "[2025-08-16 20:49:17 +0900] [Agents] [INFO] \u001b[40m\u001b[33m[Ensemble2 Agent] Ensemble Agent is ready\u001b[0m\n",
+      "[2025-08-16 20:49:17 +0900] [Agents] [INFO] \u001b[40m\u001b[37m[Messaging Agent] Messaging Agent is initializing\u001b[0m\n",
+      "[2025-08-16 20:49:17 +0900] [Agents] [INFO] \u001b[40m\u001b[37m[Messaging Agent] Messaging Agent has initialized Pushover\u001b[0m\n",
+      "[2025-08-16 20:49:17 +0900] [Agents] [INFO] \u001b[40m\u001b[32m[Planning Agent] Planning Agent is ready\u001b[0m\n",
+      "[2025-08-16 20:49:17 +0900] [Agents] [INFO] \u001b[44m\u001b[37m[Agent Framework] Agent Framework is ready\u001b[0m\n",
+      "* Running on local URL:  http://127.0.0.1:7862\n",
+      "[2025-08-16 20:49:17 +0900] [Agents] [INFO] HTTP Request: GET http://127.0.0.1:7862/gradio_api/startup-events \"HTTP/1.1 200 OK\"\n",
+      "[2025-08-16 20:49:17 +0900] [Agents] [INFO] HTTP Request: HEAD http://127.0.0.1:7862/ \"HTTP/1.1 200 OK\"\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7862/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "gio: http://127.0.0.1:7862/: Operation not supported\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-08-16 20:49:18 +0900] [Agents] [INFO] HTTP Request: GET https://api.gradio.app/pkg-version \"HTTP/1.1 200 OK\"\n"
+     ]
+    }
+   ],
    "source": [
     "agent_framework = DealAgentFramework()\n",
     "agent_framework.init_agents_as_needed()\n",
@@ -178,7 +324,107 @@
    "execution_count": null,
    "id": "48506465-1c7a-433f-a665-b277a8b4665c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7863\n",
+      "* To create a public link, set `share=True` in `launch()`.\n",
+      "gio: http://127.0.0.1:7863/: Operation not supported\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[44m\u001b[37m[Agent Framework] Initializing Agent Framework\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[44m\u001b[37m[Agent Framework] Initializing Agent Framework\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[32m[Planning Agent] Planning Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[32m[Planning Agent] Planning Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[36m[Scanner Agent] Scanner Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[36m[Scanner Agent] Scanner Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[44m\u001b[37m[Agent Framework] Initializing Agent Framework\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[44m\u001b[37m[Agent Framework] Initializing Agent Framework\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[32m[Planning Agent] Planning Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[32m[Planning Agent] Planning Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[36m[Scanner Agent] Scanner Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[36m[Scanner Agent] Scanner Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[36m[Scanner Agent] Scanner Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[36m[Scanner Agent] Scanner Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[33m[Ensemble2 Agent] Initializing Ensemble Agent\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[33m[Ensemble2 Agent] Initializing Ensemble Agent\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[31m[Specialist Agent] Specialist Agent is initializing - connecting to modal\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[31m[Specialist Agent] Specialist Agent is initializing - connecting to modal\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[31m[Specialist Agent] Specialist Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[31m[Specialist Agent] Specialist Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[34m[Frontier Agent] Initializing Frontier Agent\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[34m[Frontier Agent] Initializing Frontier Agent\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[36m[Scanner Agent] Scanner Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[36m[Scanner Agent] Scanner Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[33m[Ensemble2 Agent] Initializing Ensemble Agent\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[33m[Ensemble2 Agent] Initializing Ensemble Agent\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[31m[Specialist Agent] Specialist Agent is initializing - connecting to modal\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[31m[Specialist Agent] Specialist Agent is initializing - connecting to modal\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[31m[Specialist Agent] Specialist Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[31m[Specialist Agent] Specialist Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[34m[Frontier Agent] Initializing Frontier Agent\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[34m[Frontier Agent] Initializing Frontier Agent\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[34m[Frontier Agent] Frontier Agent is setting up with OpenAI\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[34m[Frontier Agent] Frontier Agent is setting up with OpenAI\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] Use pytorch device_name: cpu\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] Use pytorch device_name: cpu\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] Load pretrained SentenceTransformer: sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] Load pretrained SentenceTransformer: sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[34m[Frontier Agent] Frontier Agent is setting up with OpenAI\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] \u001b[40m\u001b[34m[Frontier Agent] Frontier Agent is setting up with OpenAI\u001b[0m\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] Use pytorch device_name: cpu\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] Use pytorch device_name: cpu\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] Load pretrained SentenceTransformer: sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2025-08-16 21:13:03 +0900] [Agents] [INFO] Load pretrained SentenceTransformer: sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] \u001b[40m\u001b[34m[Frontier Agent] Frontier Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] \u001b[40m\u001b[34m[Frontier Agent] Frontier Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] \u001b[40m\u001b[35m[LightGBM Agent] LightGBM Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] \u001b[40m\u001b[35m[LightGBM Agent] LightGBM Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] Use pytorch device_name: cpu\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] Use pytorch device_name: cpu\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] Load pretrained SentenceTransformer: sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] Load pretrained SentenceTransformer: sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] \u001b[40m\u001b[34m[Frontier Agent] Frontier Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] \u001b[40m\u001b[34m[Frontier Agent] Frontier Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] \u001b[40m\u001b[35m[LightGBM Agent] LightGBM Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] \u001b[40m\u001b[35m[LightGBM Agent] LightGBM Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] Use pytorch device_name: cpu\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] Use pytorch device_name: cpu\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] Load pretrained SentenceTransformer: sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2025-08-16 21:13:06 +0900] [Agents] [INFO] Load pretrained SentenceTransformer: sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[35m[LightGBM Agent] LightGBM Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[35m[LightGBM Agent] LightGBM Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[33m[Ensemble2 Agent] Ensemble Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[33m[Ensemble2 Agent] Ensemble Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[37m[Messaging Agent] Messaging Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[37m[Messaging Agent] Messaging Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[37m[Messaging Agent] Messaging Agent has initialized Pushover\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[37m[Messaging Agent] Messaging Agent has initialized Pushover\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[32m[Planning Agent] Planning Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[32m[Planning Agent] Planning Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[44m\u001b[37m[Agent Framework] Agent Framework is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[44m\u001b[37m[Agent Framework] Agent Framework is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[35m[LightGBM Agent] LightGBM Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[35m[LightGBM Agent] LightGBM Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[33m[Ensemble2 Agent] Ensemble Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[33m[Ensemble2 Agent] Ensemble Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[37m[Messaging Agent] Messaging Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[37m[Messaging Agent] Messaging Agent is initializing\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[37m[Messaging Agent] Messaging Agent has initialized Pushover\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[37m[Messaging Agent] Messaging Agent has initialized Pushover\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[32m[Planning Agent] Planning Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[32m[Planning Agent] Planning Agent is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[44m\u001b[37m[Agent Framework] Agent Framework is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[44m\u001b[37m[Agent Framework] Agent Framework is ready\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] Kicking off Planning Agent\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] Kicking off Planning Agent\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[32m[Planning Agent] Planning Agent is kicking off a run\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[32m[Planning Agent] Planning Agent is kicking off a run\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[36m[Scanner Agent] Scanner Agent is about to fetch deals from RSS feed\u001b[0m\n",
+      "[2025-08-16 21:13:13 +0900] [Agents] [INFO] \u001b[40m\u001b[36m[Scanner Agent] Scanner Agent is about to fetch deals from RSS feed\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!python price_is_right_final.py"
    ]
@@ -224,14 +470,6 @@
     "    </tr>\n",
     "</table>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "81f4dbf7-0f3c-4787-8fbc-e3c21bdb932a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
