--- a/Notebook/path/TableOfContents.ipynb
+++ b/Notebook/path/TableOfContents.ipynb
@@ -10,6 +10,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "510e3af8",
+   "metadata": {},
+   "source": [
+    "## 環境"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d982aaa",
+   "metadata": {},
+   "source": [
+    "### [環境構築](LoadEnvFrom_dotenv.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44bed51c",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "### [環境変数](LoadEnvFrom_dotenv.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b4e3248e-95a9-43aa-9883-5c0ce7cc99b5",
    "metadata": {
     "tags": []
