--- a/Notebook/path/ed-donner_llm/week1/day1_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week1/day1_ja.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7b87cadb-d513-4303-baee-a37b6f938e4d",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "# .envというファイルに環境変数をロードします。\n",
+    "# .envというファイルから環境変数をロード\n",
     "\n",
     "load_dotenv(override=True)\n",
     "api_key = os.getenv('OPENAI_API_KEY')\n",
@@ -221,7 +221,7 @@
     "elif not api_key.startswith(\"sk-proj-\"):\n",
     "    print(\"APIキーは見つかりましたが、sk-proj-で始まりません。正しいキーを使用していることを確認してください。トラブルシューティングノートブックを参照してください。\")\n",
     "elif api_key.strip() != api_key:\n",
-    "    print(\"AnAPIキーは見つかりましたが、先頭または末尾にスペースまたはタブ文字が含まれている可能性があります。これらを削除してください。トラブルシューティングノートブックを参照してください。\")\n",
+    "    print(\"APIキーは見つかりましたが、先頭または末尾にスペースまたはタブ文字が含まれている可能性があります。これらを削除してください。トラブルシューティングノートブックを参照してください。\")\n",
     "else:\n",
     "    print(\"APIキーが見つかりました。今のところ問題はありません。\")"
    ]
